--- a/www/index.html
+++ b/www/index.html
@@ -12,11 +12,17 @@
     <script src="cordova.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
+    <!-- Controllers -->
+    <script src="js/controller/BedroomCtrl.js"></script>
+    <script src="js/controller/AddDoorsCtrl.js"></script>
+    <script src="js/controller/AddWindowsCtrl.js"></script>
+    <script src="js/controller/AddFurnitureCtrl.js"></script>
+    <script src="js/controller/LayoutCtrl.js"></script>
+
   </head>
   <body ng-app="ionicApp">
     <ion-nav-bar class="bar bar-header bar-dark nav-title-slide-ios7"></ion-nav-bar>
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
   </body>
 </html>
-
-   
