Add doors added

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <title>Madori</title>
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <script src="lib/interact.min.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
@@ -20,9 +21,9 @@
     <script src="js/controller/AddFurnitureCtrl.js"></script>
     <script src="js/controller/LayoutCtrl.js"></script>
 
+
   </head>
   <body ng-app="ionicApp">
-    <ion-nav-bar class="bar bar-header bar-dark nav-title-slide-ios7"></ion-nav-bar>
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
   </body>
 </html>
