--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <script src="lib/interact.min.js"></script>
+    <script src="lib/draggabilly.pkgd.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
