--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     <script src="lib/interact.min.js"></script>
     <script src="lib/draggabilly.pkgd.js"></script>
+<!--    <script src="lib/angular-animate.js"></script>-->
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
